--- a/solutions/text_search_engine/text_search_engine.ipynb
+++ b/solutions/text_search_engine/text_search_engine.ipynb
@@ -406,7 +406,7 @@
    "source": [
     "similar_titles = []\n",
     "\n",
-    "if results[0][0].distance < 0.5:\n",
+    "if results[0][0].distance > 0.5:\n",
     "    print(\"There are no similar questions in the database, here are the closest matches:\")\n",
     "else:\n",
     "    print(\"There are similar questions in the database, here are the closest matches: \")\n",
